--- a/aboutus.html
+++ b/aboutus.html
@@ -508,7 +508,7 @@
             <ul class="list-inline mt-5">
 
                <li class="m-0 pl-10 pr-10"> <i class="fa fa-mobile text-theme-color-2 mr-5"></i> <a class="text-gray" href="#">+91 9918111254, 8576955546</a> </li>
-              <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-theme-color-2 mr-5"></i> <a class="text-gray" href="#">yashawantyadav265@gmail.com</a> </li>
+              <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-theme-color-2 mr-5"></i> <a class="text-gray" href="#">ssic.akabarpur@gmail.com</a> </li>
               
             </ul>
           </div>
