--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 <li><i class="fa fa-phone-square text-theme-colored font-36 mt-5 sm-display-block"></i></li>
                 <li>
                   <a href="#" class="font-12 text-gray text-uppercase">Call us today!</a>
-                  <h5 class="font-14 m-0">9918111254, 9918111254</h5>
+                  <h5 class="font-14 m-0">9918111254, 8576955546</h5>
                 </li>
               </ul>
             </div>
@@ -506,7 +506,7 @@
             <ul class="list-inline mt-5">
 
                <li class="m-0 pl-10 pr-10"> <i class="fa fa-mobile text-theme-color-2 mr-5"></i> <a class="text-gray" href="#">+91 9918111254, 8576955546</a> </li>
-              <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-theme-color-2 mr-5"></i> <a class="text-gray" href="#">yashawantyadav265@gmail.com</a> </li>
+              <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-theme-color-2 mr-5"></i> <a class="text-gray" href="#">ssic.akabarpur@gmail.com</a> </li>
               
             </ul>
           </div>
