--- a/gallery.html
+++ b/gallery.html
@@ -160,7 +160,8 @@
   .card{
     width: 100%;
     
-    margin: 5px;
+    margin-bottom: -150px;
+    padding-bottom: -150px;
   }
 }
 
@@ -173,14 +174,7 @@
     text-align:center;
 }
 }
-.by_yas1
-{
-  z-index: 1;
-  border-width: 1;
-  background-color: red;
-  width: 100%;
-  height: 400px;
-}
+
 @media (max-width : 610px)
 {
     .aboutbanner
@@ -191,13 +185,7 @@
      {
          padding-top:0px;
      }
-     .by_yas1
-  {
-      border-width: 1;
-      background-color: red;
-      width: 100%;
-      height: 200px;
-  }
+  
 }
 
 
