faculty page added

--- a/courses.html
+++ b/courses.html
@@ -342,7 +342,7 @@
               </li>
 
 
-              <li><a href="#">Faculty </a></li>
+              <li><a href="faculty.html">Faculty </a></li>
                <li><a href="#">Result </a></li>
                 
             
@@ -479,7 +479,7 @@
             <ul class="list angle-double-right list-border">
             <li><a href="aboutus.html">About Us</a></li>
               <li><a href="courses.html">Our Courses</a></li>
-              <li><a href="#">Faculty</a></li>
+              <li><a href="faculty.html">Faculty</a></li>
               <li><a href="#">Scholarship</a></li>
               <li><a href="#">Download</a></li>              
             </ul>            
