--- a/gallery.html
+++ b/gallery.html
@@ -381,7 +381,7 @@
               </li>
 
 
-              <li><a href="#">Faculty </a></li>
+              <li><a href="faculty.html">Faculty </a></li>
                <li><a href="#">Result </a></li>
                 
             
@@ -559,7 +559,7 @@
             <ul class="list angle-double-right list-border">
             <li><a href="aboutus.html">About Us</a></li>
               <li><a href="courses.html">Our Courses</a></li>
-              <li><a href="#">Faculty</a></li>
+              <li><a href="faculty.html">Faculty</a></li>
               <li><a href="#">Scholarship</a></li>
               <li><a href="#">Download</a></li>              
             </ul>            
